--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.artifacts
 .env
 .venv
 env/
@@ -110,6 +109,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+artifacts/
 
 # Spyder project settings
 .spyderproject
